--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.jpa.hibernate.ddl-auto=update
 server.error.whitelabel.enabled=false
 
 shippers.fetchurl=https://javaintegration.systementor.se/shippers
+
+contractcustomers.fetchurl=https://javaintegration.systementor.se/customers
