added blacklistproperties and bookingproperties

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,3 +5,15 @@ spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+integrations.shippers.fetchurl=https://javaintegration.systementor.se/shippers
+
+integrations.contract-customers.fetchurl=https://javaintegration.systementor.se/customers
+
+integrations.blacklist.fetch-url=https://javabl.systementor.se/api/gul/blacklist
+integrations.blacklist.post-url=https://javabl.systementor.se/api/gul/blacklist
+integrations.blacklist.put-url=https://javabl.systementor.se/api/gul/blacklist/
+
+integrations.bookings.discount-over-ten-nights=0.02
+integrations.bookings.discount-over-two-nights=0.005
+integrations.bookings.discount-sunday-night=0.02
