--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,14 @@ spring.application.name=booking_project
 spring.jpa.hibernate.ddl-auto=update
 server.error.whitelabel.enabled=false
 
-shippers.fetchurl=https://javaintegration.systementor.se/shippers
+integrations.shippers.fetchurl=https://javaintegration.systementor.se/shippers
 
-contractcustomers.fetchurl=https://javaintegration.systementor.se/customers
+integrations.contract-customers.fetchurl=https://javaintegration.systementor.se/customers
+
+integrations.blacklist.fetch-url=https://javabl.systementor.se/api/gul/blacklist
+integrations.blacklist.post-url=https://javabl.systementor.se/api/gul/blacklist
+integrations.blacklist.put-url=https://javabl.systementor.se/api/gul/blacklist/
+
+integrations.bookings.discount-over-ten-nights=0.02
+integrations.bookings.discount-over-two-nights=0.005
+integrations.bookings.discount-sunday-night=0.02
