--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,8 @@ integrations.blacklist.put-url=https://javabl.systementor.se/api/gul/blacklist/
 integrations.bookings.discount-over-ten-nights=0.02
 integrations.bookings.discount-over-two-nights=0.005
 integrations.bookings.discount-sunday-night=0.02
+
+integrations.events.queue-name=9ac8f638-965a-44af-8204-d51b025d2dd1
+integrations.events.factory-host=128.140.81.47
+integrations.events.factory-username=djk47589hjkew789489hjf894
+integrations.events.factory-password=sfdjkl54278frhj7
