production profile added + CustomerServiceImplTests

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,9 +1,9 @@
 spring.config.import=optional:file:.env[.properties]
 
 spring.application.name=booking_project
-spring.datasource.url=projectDatabaseUrl
-spring.datasource.username=yourUsername
-spring.datasource.password=yourPassword
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/bookingProject
+spring.datasource.username=dbUser2024
+spring.datasource.password=secretPassword
 spring.jpa.hibernate.ddl-auto=update
 server.error.whitelabel.enabled=false
 
@@ -20,6 +20,6 @@ integrations.bookings.discount-over-two-nights=0.005
 integrations.bookings.discount-sunday-night=0.02
 
 integrations.events.queue-name=9ac8f638-965a-44af-8204-d51b025d2dd1
-integrations.events.factory-host=hostIP
-integrations.events.factory-username=factoryUsername
-integrations.events.factory-password=factoryPassword
+integrations.events.factory-host=128.140.81.47
+integrations.events.factory-username=djk47589hjkew789489hjf894
+integrations.events.factory-password=sfdjkl54278frhj7
