Reset password token methods added to service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,13 @@ integrations.events.queue-name=9ac8f638-965a-44af-8204-d51b025d2dd1
 integrations.events.factory-host=128.140.81.47
 integrations.events.factory-username=djk47589hjkew789489hjf894
 integrations.events.factory-password=sfdjkl54278frhj7
+
+spring.mail.host=smtp.ethereal.email
+spring.mail.port=587
+spring.mail.username=raven15@ethereal.email
+spring.mail.password=edqyU39ApGYyZ7nrje
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.debug=true
+spring.web.resources.static-locations=classpath:/static/
