--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,6 +6,16 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
+spring.mail.host=smtp.ethereal.email
+spring.mail.port=587
+spring.mail.username=delores.wolff@ethereal.email
+spring.mail.password=EkJKzAScBxRhUPHMCj
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.debug=true
+spring.web.resources.static-locations=classpath:/static/
+
 integrations.shippers.fetchurl=https://javaintegration.systementor.se/shippers
 
 integrations.contract-customers.fetchurl=https://javaintegration.systementor.se/customers
