started tests for roomserviceimpl

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=bookingProject
+spring.application.name=booking_project
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=password
@@ -8,8 +8,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 spring.mail.host=smtp.ethereal.email
 spring.mail.port=587
-spring.mail.username=etherealusername
-spring.mail.password=etherealpassword
+spring.mail.username=delores.wolff@ethereal.email
+spring.mail.password=EkJKzAScBxRhUPHMCj
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
