started tests for roomserviceimpl

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,5 @@
+spring.config.import=optional:file:.envtests[.properties]
+
 spring.application.name=booking_project
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
@@ -8,8 +10,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 spring.mail.host=smtp.ethereal.email
 spring.mail.port=587
-spring.mail.username=delores.wolff@ethereal.email
-spring.mail.password=EkJKzAScBxRhUPHMCj
+spring.mail.username=etherealusername
+spring.mail.password=etherealpassword
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
@@ -29,6 +31,6 @@ integrations.bookings.discount-over-two-nights=0.005
 integrations.bookings.discount-sunday-night=0.02
 
 integrations.events.queue-name=9ac8f638-965a-44af-8204-d51b025d2dd1
-integrations.events.factory-host=128.140.81.47
-integrations.events.factory-username=djk47589hjkew789489hjf894
-integrations.events.factory-password=sfdjkl54278frhj7
+integrations.events.factory-host=hostIP
+integrations.events.factory-username=factoryUsername
+integrations.events.factory-password=factoryPassword
