added EmailProperties for UserController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,7 @@ spring.mail.properties.mail.debug=true
 spring.web.resources.static-locations=classpath:/static/
 
 integrations.shippers.fetchurl=https://javaintegration.systementor.se/shippers
+
 integrations.contract-customers.fetchurl=https://javaintegration.systementor.se/customers
 
 integrations.blacklist.fetch-url=https://javabl.systementor.se/api/gul/blacklist
@@ -29,7 +30,9 @@ integrations.bookings.discount-over-two-nights=0.005
 integrations.bookings.discount-sunday-night=0.02
 
 integrations.events.queue-name=9ac8f638-965a-44af-8204-d51b025d2dd1
-
 integrations.events.factory-host=hostIP
 integrations.events.factory-username=factoryUsername
 integrations.events.factory-password=factoryPassword
+
+integrations.emails.email-address=raven15@ethereal.email
+integrations.emails.personal=Raven
