All properties files updated

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -33,3 +33,6 @@ integrations.events.queue-name=9ac8f638-965a-44af-8204-d51b025d2dd1
 integrations.events.factory-host=hostIP
 integrations.events.factory-username=factoryUsername
 integrations.events.factory-password=factoryPassword
+
+integrations.emails.email-address=raven15@ethereal.email
+integrations.emails.personal=Raven
