--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -32,3 +32,6 @@ integrations.events.queue-name=9ac8f638-965a-44af-8204-d51b025d2dd1
 integrations.events.factory-host=128.140.81.47
 integrations.events.factory-username=djk47589hjkew789489hjf894
 integrations.events.factory-password=sfdjkl54278frhj7
+
+integrations.emails.email-address=raven15@ethereal.email
+integrations.emails.personal=Raven
