properties fix and trix

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -34,5 +34,5 @@ integrations.events.factory-host=hostIP
 integrations.events.factory-username=factoryUsername
 integrations.events.factory-password=factoryPassword
 
-integrations.emails.email-address=raven15@ethereal.email
-integrations.emails.personal=Raven
+integrations.emails.email-address=delores.wolff@ethereal.email
+integrations.emails.personal=Uttern
