--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -35,5 +35,5 @@ integrations.events.factory-host=128.140.81.47
 integrations.events.factory-username=djk47589hjkew789489hjf894
 integrations.events.factory-password=sfdjkl54278frhj7
 
-integrations.emails.email-address=raven15@ethereal.email
-integrations.emails.personal=Raven
+integrations.emails.email-address=delores.wolff@ethereal.email
+integrations.emails.personal=Uttern
